@@ -4,6 +4,10 @@ libdebian-installer (0.61) unstable; urgency=low
   * Fix off-by-one error in the rfc822 parser (closes: #500378).
   * Remove workarounds for ignored errors.
 
+  [ Martin Michlmayr ]
+  * Add support for Marvell's Kirkwood platform, including devices
+    such as the SheevaPlug and QNAP TS-219.
+
  -- Frans Pop <fjp@debian.org>  Sat, 27 Sep 2008 18:37:27 +0200
 
 libdebian-installer (0.60) unstable; urgency=low
